...
  [super viewDidLoad];
  [self.view setBackgroundColor:[UIColor whiteColor]];
  [self setupLayout];
}

- (void)setupLayout {
  UIButton *bookButton = [UIBuilder buildButtonWithTitle:@"Book a room"];
  [self.view addSubview:bookButton];
  [bookButton addTarget:self
                 action:@selector(bookButtonWasPressed)
       forControlEvents:UIControlEventTouchUpInside];

  UIButton *browseButton = [UIBuilder buildButtonWithTitle:@"Browse hotels"];
  [self.view addSubview:browseButton];
  [browseButton addTarget:self
                   action:@selector(browseButtonWasPressed)
         forControlEvents:UIControlEventTouchUpInside];

  UIButton *lookupButton = [UIBuilder buildButtonWithTitle:@"See all bookings"];
  [self.view addSubview:lookupButton];
  [lookupButton addTarget:self
                   action:@selector(lookupButtonWasPressed)
         forControlEvents:UIControlEventTouchUpInside];

  [NSLayoutConstraint activateConstraints:@[
...
