...
  [self.endDate setMinimumDate:[self addADaytoDate:self.startDate.date]];
  [self.endDate setDatePickerMode:UIDatePickerModeDate];
  [self.view addSubview:self.endDate];
  [self.endDate setTranslatesAutoresizingMaskIntoConstraints:NO];

  // set up check availability button
  self.submitButton = [UIBuilder buildButtonWithTitle:@"Check availability"];
  [self.submitButton addTarget:self
                        action:@selector(submitButtonWasPressed)
              forControlEvents:UIControlEventTouchUpInside];
  [self.view addSubview:self.submitButton];

  [NSLayoutConstraint activateConstraints:@[
...
